real-time updating

--- a/view/index.ejs
+++ b/view/index.ejs
@@ -21,7 +21,8 @@
               </div>
               <br>
             <div class="app"> 
-                <div class="p-3" style="border: 1px solid gray; height: 300px; border-radius: 8px;">
+                  <textarea class="form-control" rows="5" id="getWord"></textarea>
+                  <div class="p-3" style="height: 50px; border-radius: 8px;overflow: auto;">
                     <span id="final" class="text-light"></span>
                     <span id="interim" class="text-secondary"></span>
                   </div>
